--- a/251125_project/index.html
+++ b/251125_project/index.html
@@ -3,29 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Reformation</title>
+    <title>NameCard Project</title>
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Paytone+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header>
-        <h1>Digital Reformation</h1>
-    </header>
-    <div class="card-container">
-    <div class="card">
-        <h2>Edwards and Whitefield</h2>
-        <p>They are protestants.</p>
-        <p>They emphasize experiential regeneration.</p>
-    </div>
-
-    <div class="card">
-        <h2>Kuyper and Bavinck</h2>
-        <p>They are neo-calvinists.</p>
-        <p>They emphasize unconscious regeneration.</p>
-    </div>
-    </div>
-    <div class="btn-container">
-        <button onclick="showText()">Click Me</button>
-    </div>
-    <script src="script.js"></script>
+        <div class="main-container">
+            <div class="box-container1">
+                <div class="profile-picture">
+                    <img src="./profile.jpg" alt="a profile picture">
+                </div>
+                <div class="links">
+                    <a href="#">Harim Yoo</a>
+                </div>
+            </div>
+            <div class="box-container2">
+                <div class="about">
+                    <h4 class="">About Me</h2>
+                        <p>Published 10+ prepbooks</p>
+                        <p>Sold 10,000+ prepbooks</p>
+                        <p>Director of ReachPrep</p>
+                        <p>Founder of Tracebound AI</p>
+                </div>
+                <div class="contact">
+                    <h4>URLs</h4>
+                    <p>EMAIL: <a href="mailto:jamesyhr@gmail.com" id="mail_to_me">jamesyhr@gmail.com</a> </p>
+                    <p>WEBSITE: <a href="https://www.reachprep.kr" id="reachprep_url">ReachPrep</a></p>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
