--- a/251127_project/index.html
+++ b/251127_project/index.html
@@ -12,7 +12,7 @@
         <p id="text-area">Hello this is the text area I want to copy.</p>
       </div>
       <div class="btn-container">
-        <button onclick="copyText()" id="btn-disposable">Copy Text</button>
+        <button id="btn-disposable">Copy Text</button>
       </div>
       <div class="disclaimer">
         <p>The below is where you see the copied part.</p>
@@ -21,16 +21,21 @@
     </div>
     <script>
       const textArea = document.getElementById("text-area");
-      const textToCopy = textArea.textContent;
       const btnDispose = document.getElementById("btn-disposable");
-      const placeToShow = document.createElement("p");
 
-      placeToShow.textContent = textToCopy;
-      placeToShow.id = "someText";
+      
       btnDispose.addEventListener("click", function () {
+        const textToCopy = textArea.textContent;
+        const placeToShow = document.createElement("p");
+        placeToShow.textContent = textToCopy;
+        placeToShow.id = "someText";
+        document.getElementById("paste-container").appendChild(placeToShow);
+
         alert("Copied Successfully");
         btnDispose.disabled = true;
-        document.getElementById("paste-container").appendChild(placeToShow);
+        btnDispose.textContent = "Copied";
+        btnDispose.style.backgroundColor = "gray";
+        
       });
     </script>
   </body>
