showing a video url after clicking a button

--- a/251129_simple_math_kit_project/index.html
+++ b/251129_simple_math_kit_project/index.html
@@ -22,19 +22,12 @@
             <button>Choice 5</button>
         </div>
         <div class="scrolling">
-            <button onclick="showSolution()">Show Solution</button>
+            <button onclick="showSolution()" id="show-button">Show Solution</button>
             <button onclick="nextProblem()">Next</button>
         </div>
+        <div class="videoParent">
+        </div>
     </div>
-
-    <script>
-        function showSolution() {
-            console.log("Hello");
-        }
-
-        function nextProblem() {
-            console.log("Next");
-        }
-    </script>
+<script src="script.js"></script>
 </body>
 </html>
