node js practice

--- a/251129_simple_math_kit_project/index.html
+++ b/251129_simple_math_kit_project/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="card">
-        <div class="title">
+        <div class="title" id="title">
             <h3>Problem</h3>
         </div>
-        <div class="problem">
-            <p>Problem Statement</p>
+        <div class="problem" >
+            <p id="problem">Problem Statement</p>
         </div>
         <div class="answer-choices">
             <button>Choice 1</button>
@@ -26,15 +26,6 @@
             <button onclick="nextProblem()">Next</button>
         </div>
     </div>
-
-    <script>
-        function showSolution() {
-            console.log("Hello");
-        }
-
-        function nextProblem() {
-            console.log("Next");
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
