--- a/251217_project/public/index.html
+++ b/251217_project/public/index.html
@@ -4,31 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Problem Generator</title>
-    <style>
-        .problemCard {
-            font-family: arial, sans-serif;
-            width: 60%;
-            height: 50%;
-            margin: auto;
-            border: 1px solid;
-            display: flex;
-            flex-direction:column;
-            justify-content: space-evenly;
-        }
-        p {
-            text-align: center;
-            border:1px solid;
-        }
-
-    </style>
+    <title>Digital SAT Math @ ReachPrep</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <div class="problemCard">
-        <button id="clickHere">Click Here</button>
-        <button id="clearAll">Clear All</button>
-        <p id="dataShow"></p>
+    <div class="cardContainer">
+        <div class="problemCard">
+            <div class="buttonContainer">
+                <p id="textHere">Digital SAT Math @ ReachPrep</p>
+                <button id="clickHere">Next</button>
+                <button id="clearAll">Clear All</button>
+            </div>
+            <p id="idShow" style="display:none"></p>
+            <p id="dataShow"></p>
+            <div class="optionsContainer" id="optionsContainer"></div>
+        </div>
     </div>
 </body>
 <script>
@@ -36,22 +27,74 @@
     let questions = [];
     const clickHere = document.getElementById('clickHere');
     const dataShow = document.getElementById('dataShow');
+    const idShow = document.getElementById('idShow');
     const clearAll = document.getElementById('clearAll');
+    const optionsContainer = document.getElementById('optionsContainer');
+
+    async function init() {
+        try {
+            questions = await fetch('/test').then(res => res.json());
+            console.log("Data fetched");
+        } catch (err) {
+            console.error(err.message);
+        }
+    }
+    init();
 
     clickHere.addEventListener('click', async () => {
-        const dataFetched = await fetch('/test').then(res => res.json());
-        const person = dataFetched[currentIndex];
-        dataShow.innerHTML = `${person.name} is of age ${person.age}`;
+
+        const problem = questions[currentIndex];
+        idShow.style.display = "block";
+        idShow.innerHTML = `Problem ${problem.id}.`;
+        dataShow.innerHTML = problem.text;
+        optionsContainer.innerHTML = problem['options'].map((item) => `<button> ${item} </button>`).join(" ");
         currentIndex++;
 
-        if (currentIndex >= dataFetched.length) {
+        if (currentIndex >= questions.length) {
             currentIndex = 0;
         }
     });
 
     clearAll.addEventListener('click', () => {
+        idShow.style.display = "none";
+        idShow.innerHTML = "";
         dataShow.innerHTML = "";
+        optionsContainer.innerHTML = "";
     });
+
+
+    optionsContainer.addEventListener('click', async (e) => {
+        if (e.target.tagName !== "BUTTON") return;
+        let problemIndex = currentIndex === 0 ? questions.length-1 : currentIndex-1;
+        const problem = questions[problemIndex];
+        const selectedAnswer = e.target.innerText.trim();
+        let data = { id: problem.id, guess: selectedAnswer };
+        try {
+            const response = await fetch('/check', {
+                method: "POST",
+                headers: {"Content-Type":"application/json"},
+                body: JSON.stringify(data)
+            });
+            if (!response.ok) throw new Error(response.statusText);
+            const resultData = await response.json();
+            if (resultData.correct) {
+                e.target.style.backgroundColor = "Green";
+                setTimeout(() => {
+                    e.target.style.backgroundColor = "";
+                },1000);
+            } else {
+                e.target.style.backgroundColor = "Red";
+                setTimeout(() => {
+                    e.target.style.backgroundColor = "";
+                },1000);
+            }
+        } catch(error) {
+            console.error(error.message);
+        }
+    });
+
+
+
 </script>
 
 </html>
