--- a/251218_project4/index.html
+++ b/251218_project4/index.html
@@ -30,9 +30,10 @@
     function createSeat(seatNumber) {
         const btn = document.createElement('button');
         const li = document.createElement('li')
+        const p = document.createElement('p')
         btn.textContent = seatNumber;
         btn.classList.add("seat");
-        btn.addEventListener("click", () => {
+        btn.addEventListener("click", async () => {
             if (btn.classList.contains("selected")) {
                 btn.classList.remove("selected");
                 totalBooked--;
@@ -40,6 +41,12 @@
                 li.remove();
                 return;
             } else {
+                p.textContent = `Loading...`;
+                bookedList.append(p);
+                btn.disabled=true;
+                await new Promise((resolve) => setTimeout(resolve,3000));
+                p.remove(); 
+                btn.disabled = false;
                 btn.classList.add("selected");
 
                 li.textContent = seatNumber;
