--- a/Js-Fundamentals/08_DOM_MiniTasks/mentee/homework.html
+++ b/Js-Fundamentals/08_DOM_MiniTasks/mentee/homework.html
@@ -8,7 +8,21 @@
   <body>
     <!-- STEP 1 — Create the main page container -->
     <!-- Add a <main> element with a class of "page" -->
+      <main class="page">
+        <section class="card" id="moviesCard">
+          <h1 id="moviesTitle">My Favorite Movies</h1>
+          <p id="moviesInfo" class="info"></p>
 
+          <ul id="moviesList" class="movie-list">
+          </ul>
+        
+        <p class="hint">
+          Use homework.js and make sure you reload the homepage to see the javascript code at work.
+        </p>
+
+        </section>
+
+      </main>
     <!-- STEP 2 — Create the card section -->
     <!-- Inside <main>, add a <section> -->
     <!-- Give it an id of "moviesCard" and a class of "card" -->
@@ -44,5 +58,6 @@
     <!-- STEP 8 — Link JavaScript -->
     <!-- Add a <script> tag at the bottom of the body -->
     <!-- src="homework.js" -->
+    <script src="homework.js"></script>
   </body>
 </html>
