--- a/Js-Fundamentals/09_DOM_EventsMiniTasks/mentee/index.html
+++ b/Js-Fundamentals/09_DOM_EventsMiniTasks/mentee/index.html
@@ -6,70 +6,37 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- STEP 1 — Create the main page container -->
-    <!-- Add a <main> element with a class of "page" -->
 
-    <!-- STEP 2 — Create the profile card section -->
-    <!-- Inside <main>, add a <section> -->
-    <!-- Give it a class of "card" and an id of "profileCard" -->
+    <main class="page">
+      <section class="card" id="profileCard">
+        <h1 id="profileNameDisplay">HARIM YOO</h1>
+         <p id="profileMoodDisplay" class="mood-line">Bright</p>
+      <p id="profileColorDisplay" class="color-line">
+        <span id="colorValueText"></span>
+      </p>
+      <div class="form-grid">
+        <div class="field">
+          <label for="colorInput">Name</label>
+          <input type="text" id="colorInput" placehoder="Type your name">
+        </div>
+        <div class="field">
+          <label for="moodSelect"></label>
+          <select id="moodSelect">
+            <option value="neutral" default>neutral</option>
+            <option value="happy">happy</option>
+            <option value="focused">focused</option>
+            <option value="tired">tired</option>
+          </select>
 
-    <!-- STEP 3 — Add the profile name display -->
-    <!-- Add an <h1> element -->
-    <!-- Text: "Your Name" -->
-    <!-- id: "profileNameDisplay" -->
+          <div class="button-row">
+            <button id="resetProfileBtn" class="btn-secondary">Reset Profile</button>
+          </div>
+          <p class="hint">Hey, you should work on homework.js and live updates.</p>
 
-    <!-- STEP 4 — Add the mood display line -->
-    <!-- Add a <p> element -->
-    <!-- id: "profileMoodDisplay" -->
-    <!-- class: "mood-line" -->
-    <!-- Text should mention the current mood -->
-
-    <!-- STEP 5 — Add the favorite color display -->
-    <!-- Add a <p> element -->
-    <!-- id: "profileColorDisplay" -->
-    <!-- class: "color-line" -->
-    <!-- Inside it, include a <span> -->
-    <!-- span id: "colorValueText" -->
-
-    <!-- STEP 6 — Create the form grid container -->
-    <!-- Add a <div> with class "form-grid" -->
-
-    <!-- STEP 7 — Add the name input field -->
-    <!-- Add a <div> with class "field" -->
-    <!-- Inside it, add: -->
-    <!-- a <label> linked to nameInput -->
-    <!-- an <input> with id="nameInput" and type="text" -->
-
-    <!-- STEP 8 — Add the favorite color input field -->
-    <!-- Add another <div> with class "field" -->
-    <!-- Inside it, add: -->
-    <!-- a <label> linked to colorInput -->
-    <!-- an <input> with id="colorInput" and type="text" -->
-
-    <!-- STEP 9 — Add the mood select field -->
-    <!-- Add another <div> with class "field" -->
-    <!-- Inside it, add: -->
-    <!-- a <label> linked to moodSelect -->
-    <!-- a <select> with id="moodSelect" -->
-    <!-- Include options for: neutral, happy, focused, tired -->
-    <!-- Set neutral as selected by default -->
-
-    <!-- STEP 10 — Create the button container -->
-    <!-- Add a <div> with class "button-row" -->
-
-    <!-- STEP 11 — Add the reset button -->
-    <!-- Add a <button> -->
-    <!-- id: "resetProfileBtn" -->
-    <!-- class: "btn secondary" -->
-    <!-- Text: "Reset Profile" -->
-
-    <!-- STEP 12 — Add a hint paragraph -->
-    <!-- Add a <p> element -->
-    <!-- class: "hint" -->
-    <!-- Mention homework.js and live updates -->
-
-    <!-- STEP 13 — Link JavaScript -->
-    <!-- Add a <script> tag at the bottom of the body -->
-    <!-- src="homework.js" -->
+        </div>
+      </div>
+      </section>
+    </main>
+    <script src="script.js"></script>
   </body>
 </html>
