--- a/Js-Fundamentals/09_DOM_EventsMiniTasks/mentee/homework.html
+++ b/Js-Fundamentals/09_DOM_EventsMiniTasks/mentee/homework.html
@@ -9,7 +9,8 @@
     <main class="page">
       <section class="card" id="profileCard">
         <h1 id="profileNameDisplay">Your Name</h1>
-        <p id="profileMoodDisplay" class="mood-line">Current mood: neutral</p>
+        <p id="profileMoodDisplay" class="mood-line">Current mood: neutral
+        </p>
         <p id="profileColorDisplay" class="color-line">
           Favorite color:
           <span id="colorValueText">none yet</span>
