--- a/Js-Fundamentals/12_API_Axios/mentee/index.html
+++ b/Js-Fundamentals/12_API_Axios/mentee/index.html
@@ -7,84 +7,29 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- STEP 1 — Create the main page container -->
-    <!-- Add a <main> element with a class of "page" -->
-
-    <!-- STEP 2 — Create the main card -->
-    <!-- Inside <main>, add a <section> -->
-    <!-- Give it a class of "card" -->
-
-    <!-- STEP 3 — Add the card title -->
-    <!-- Add an <h1> element -->
-    <!-- class: "card-title" -->
-    <!-- Text: "Axios API Mini Lab" -->
-
-    <!-- STEP 4 — Add the card subtitle -->
-    <!-- Add a <p> element -->
-    <!-- class: "card-subtitle" -->
-    <!-- Mention axios and async/await -->
-
-    <!-- STEP 5 — Create the first widget (Random Advice) -->
-    <!-- Add a <section> with class "widget" -->
-
-    <!-- STEP 6 — Add the widget title -->
-    <!-- Add an <h2> -->
-    <!-- Text: "1. Random Advice" -->
-
-    <!-- STEP 7 — Add the advice text display -->
-    <!-- Add a <p> element -->
-    <!-- class: "widget-text" -->
-    <!-- id: "adviceText" -->
-
-    <!-- STEP 8 — Add the advice button -->
-    <!-- Add a <button> -->
-    <!-- id: "adviceBtn" -->
-    <!-- class: "btn primary" -->
-    <!-- Text: "Get Advice" -->
-
-    <!-- STEP 9 — Create the second widget (Random Cat Fact) -->
-    <!-- Add another <section> with class "widget" -->
-
-    <!-- STEP 10 — Add the widget title -->
-    <!-- Add an <h2> -->
-    <!-- Text: "2. Random Cat Fact" -->
-
-    <!-- STEP 11 — Add the cat fact text display -->
-    <!-- Add a <p> element -->
-    <!-- class: "widget-text" -->
-    <!-- id: "catFactText" -->
-
-    <!-- STEP 12 — Add the cat fact button -->
-    <!-- Add a <button> -->
-    <!-- id: "catFactBtn" -->
-    <!-- class: "btn secondary" -->
-    <!-- Text: "Get Cat Fact" -->
-
-    <!-- STEP 13 — Create the third widget (Random Space Photo) -->
-    <!-- Add another <section> with class "widget" -->
-
-    <!-- STEP 14 — Add the widget title -->
-    <!-- Add an <h2> -->
-    <!-- Text: "3. Random Space Photo (NASA APOD)" -->
-
-    <!-- STEP 15 — Add the space display container -->
-    <!-- Add a <div> -->
-    <!-- class: "widget-text" -->
-    <!-- id: "spaceDisplay" -->
-
-    <!-- STEP 16 — Add the space photo button -->
-    <!-- Add a <button> -->
-    <!-- id: "spaceBtn" -->
-    <!-- class: "btn ghost" -->
-    <!-- Text: "Get Space Photo" -->
-
-    <!-- STEP 17 — Add a hint paragraph -->
-    <!-- Add a <p> element -->
-    <!-- class: "hint" -->
-    <!-- Mention script.js and DevTools Network -->
-
-    <!-- STEP 18 — Link JavaScript -->
-    <!-- Add a <script> tag at the bottom of the body -->
-    <!-- src="script.js" -->
+    <main class="page">
+      <section class="card">
+        <h1 class="card-title">Axios API Mini Lab</h1>
+        <p class="card-subtitle">Axios and How Async/Await works</p>
+        <section class="widget">
+        <h2>1. Random Advice</h2>
+        <p class="widget-text" id="adviceText"></p>
+        <button id="adviceBtn" class="btn primary">Get Advice</button>
+        </section>
+        <section class="widget">
+          <h2>2.Random Cat Fact</h2>
+          <p class="widget-text" id="catFactText"></p>
+          <button id="catFactBtn" class="btn secondary">Get Cat Fact</button>
+        </section>
+        <section class="widget">
+          <h2>3. Random Space Photo (NASA APOD)</h2>
+          <div class="widget-text" id="spaceDisplay"></div>
+          <button class="btn ghost" id="spaceBtn">Get Space Photo</button>
+        </section>
+        <p class="hint">Using script.js and DevTools and Network, we can get the data.</p>
+      </section>
+    </main>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
