--- a/Js-Fundamentals/12_API_Axios/mentee/homework.html
+++ b/Js-Fundamentals/12_API_Axios/mentee/homework.html
@@ -7,66 +7,26 @@
     <link rel="stylesheet" href="homework.css" />
   </head>
   <body>
-    <!-- STEP 1 — Create the main page container -->
-    <!-- Add a <main> element with a class of "page" -->
-
-    <!-- STEP 2 — Create the main card -->
-    <!-- Inside <main>, add a <section> -->
-    <!-- Give it a class of "card" -->
-
-    <!-- STEP 3 — Add the main title -->
-    <!-- Add an <h1> element -->
-    <!-- Text: "Country Info Viewer (Axios)" -->
-
-    <!-- STEP 4 — Add the subtitle -->
-    <!-- Add a <p> element -->
-    <!-- class: "subtitle" -->
-    <!-- Mention Axios and async/await -->
-
-    <!-- STEP 5 — Create the input + button row -->
-    <!-- Add a <div> with class "field-row" -->
-
-    <!-- STEP 6 — Add the country label -->
-    <!-- Add a <label> -->
-    <!-- for: "countryInput" -->
-    <!-- Text: "Country name" -->
-
-    <!-- STEP 7 — Add the country input -->
-    <!-- Add an <input> element -->
-    <!-- id: "countryInput" -->
-    <!-- type: "text" -->
-    <!-- placeholder with example country names -->
-
-    <!-- STEP 8 — Add the search button -->
-    <!-- Add a <button> -->
-    <!-- id: "searchCountryBtn" -->
-    <!-- class: "btn primary" -->
-    <!-- Text: "Search Country" -->
-
-    <!-- STEP 9 — Create the info display block -->
-    <!-- Add a <div> with class "info-block" -->
-
-    <!-- STEP 10 — Add country info elements -->
-    <!-- Add an <h2> -->
-    <!-- id: "countryNameDisplay" -->
-    <!-- Add three <p> elements -->
-    <!-- ids: -->
-    <!-- countryCapitalDisplay -->
-    <!-- countryRegionDisplay -->
-    <!-- countryPopulationDisplay -->
-
-    <!-- STEP 11 — Add the status message -->
-    <!-- Add a <p> element -->
-    <!-- id: "countryStatusMessage" -->
-    <!-- class: "status-message" -->
-
-    <!-- STEP 12 — Add a hint paragraph -->
-    <!-- Add a <p> element -->
-    <!-- class: "hint" -->
-    <!-- Mention homework.js -->
-
-    <!-- STEP 13 — Link JavaScript -->
-    <!-- Add a <script> tag at the bottom of the body -->
-    <!-- src="homework.js" -->
+    <main class="page">
+      <section class="card">
+        <h1>Country Info Viewer (Axios)</h1>
+        <p class="subtitle">Axios uses Async/Await method.</p>
+        <div class="field-row">
+          <label for="countryInput">Country Name:</label>
+          <input id="countryInput" type="text" placeholder="South Korea" autocomplete="off"/>
+          <button id="searchCountryBtn" class="btn primary">Search Country</button>
+        </div>
+        <div class="info-block">
+        <h2 id="countryNameDisplay"></h2>
+        <p id="countryCapitalDisplay"></p>
+        <p id="countryRegionDisplay"></p>
+        <p id="countryPopulationDisplay"></p>
+        </div>
+        <p id="countryStatusMessage" class="status-message"></p>
+        <p class="hint">We do this using homework.js</p>
+      </section>
+    </main>
+    <script src="homework.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
