--- a/Js-Fundamentals/10_HW_music-playlist-js-local-storage/mentee/index.html
+++ b/Js-Fundamentals/10_HW_music-playlist-js-local-storage/mentee/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <h1>Build Your Vibe Playlist</h1>
 
-    <button id="toggleModeBtn">Dark Mode</button>
+    <button id="toggleModeBtn">Switch Mode</button>
     <form id="songForm">
       <label>Song Title</label>
       <input type="text" id="titleInput" autocomplete="off" />
