--- a/level-2-final-project/Level_2_Final/showexercise.html
+++ b/level-2-final-project/Level_2_Final/showexercise.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn Random Exercises</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <a href="./index.html">Home</a>
-        <a href="./logworkout.html" class="LogTag">Log Your Workout</a>
-        <a href="./showexercise.html" class="LearnTag">Learn Random Exercises</a>
-    </header>
+<script src = "script-exercise.js"></script>
 </body>
 </html>
