--- a/level-2-final-project/Level_2_Final/showexercise.html
+++ b/level-2-final-project/Level_2_Final/showexercise.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<script src = "script-exercise.js"></script>
+<script type="module" src = "script-exercise.js"></script>
 </body>
 </html>
