--- a/level-2-final-project/Level_2_Final/index.html
+++ b/level-2-final-project/Level_2_Final/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 </body>
-<script src="script-index.js"></script>
+<script type="module" src="script-index.js"></script>
 </html>
 
 
