--- a/level-2-final-project/Level_2_Final/logworkout.html
+++ b/level-2-final-project/Level_2_Final/logworkout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<script src="script-log.js"></script>
+<script type="module" src="script-log.js"></script>
 </body>
 
 </html>
